--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sync:assets": "node scripts/sync-post-assets.mjs"
+    "sync:assets": "node scripts/sync-post-assets.mjs",
+    "new:post": "node scripts/new-post.mjs"
   },
   "dependencies": {
     "clsx": "^2.1.0",
