--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "new:post": "node scripts/new-post.mjs"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.0",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
